# jenkins-monitor

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MVP_QUICKSTART.md  Makefile  QUICKSTART.md  README.md  ROADMAP.md  USAGE.md  config.example.toml  config.toml
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
RELEASE-NOTES/: v0.1.0.md  v0.1.0.txt
RELEASES/: v0.1.0.md
RELEASE_NOTES/: v0.1.0.txt
packaging/: jenkins-monitor.service
scripts/: build_jenkins_jobs.sh  test_build_jobs_dry_run.sh
src/: alert.rs  config.rs  jenkins.rs  main.rs  monitor.rs
