[package]
name = "jenkins-monitor"
version = "0.1.0"
authors = ["Jordan Starcher <jstarcher@gmail.com>"]
edition = "2018"

[[bin]]
name = "jenkins-monitor"
path = "src/main.rs"
doc = false

[dependencies]
jenkins_api = "0.7"
job_scheduler = "1.1"
lazy_static = "1.4"
log = "0.4"
toml = "0.5"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
