[package]
name = "jenkins-monitor"
version = "0.1.0"
authors = ["Jordan Starcher <jstarcher@gmail.com>"]
edition = "2021"

[[bin]]
name = "jenkins-monitor"
path = "src/main.rs"
doc = false

[dependencies]
cron = "0.12"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
lettre = "0.11"
anyhow = "1.0"
